// Copyright 2016 The Cartographer Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cartographer.mapping.scan_matching.proto;

message ICPScanMatcherOptions2D {
  double nearest_neighbour_point_huber_loss = 1;
  double nearest_neighbour_feature_huber_loss = 2;

  double point_pair_point_huber_loss = 3;
  double point_pair_feature_huber_loss = 4;

  double point_weight = 6;
  double feature_weight = 7;

  // pairs with and error greater than this are not included in the optimisation
  double point_inlier_threshold = 8;
  double feature_inlier_threshold = 9;

  // Used for evaluating a match
  double raytrace_threshold = 10;
  double hit_threshold = 11;
  double feature_match_threshold = 12;
}
